lncli+routerrpc: add setter/getter for fee level config
This commit adds functionality to configure fee level configuration at
run time via rpc.
